# SlotPlanner

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_STRUCTURE.md  OPTIMIZER_TEST_SCENARIOS.md  README.md  implementation_plan.md  main.py  pyproject.toml  pytest.ini  version.json
.github/: CONTRIBUTING.md
.github/workflows/: basic-validation.yml  nightly.yml  pr-checks.yml  release-readiness.yml  release.yml  test.yml  version-release.yml
app/: gui.py  storage.py  ui_feedback.py  ui_teachers.py  utils.py  validation.py  version.py
app/config/: logging_config.py  translations.json
app/handlers/: __init__.py  base_handler.py  child_handlers.py  main_handlers.py  results_handlers.py  settings_handlers.py  tandem_handlers.py  teacher_handlers.py
app/ui/: add_child.ui  add_tandem.ui  add_teacher.ui  main_window_v2.ui
scripts/: check-status.py  verify_translations.py  version-manager.py
tests/: README.md  conftest.py  test_cicd_validation.py  test_helpers.py  test_runner.py  test_storage.py  test_translation_coverage.py  test_validation.py  test_version_management.py
tests/handlers/: test_results_handlers.py
tests/optimizer/: __init__.py  test_basic_functionality.py  test_constraints.py  test_performance_edge_cases.py  test_quantitative_optimization.py  test_regression_baseline.py  test_tandem_scheduling.py  test_weight_optimization.py
tests/ui/: __init__.py  test_main_window.py
